add all rules...

--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -100,7 +100,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_gravity="center_vertical"
-                        android:text="Rules of Games"
+                        android:text="Game's Rule"
                         android:textStyle="bold"
                         android:textSize="21sp"
                         android:layout_marginLeft="10dp"
@@ -127,8 +127,8 @@
                         android:layout_height="wrap_content"
                         android:text="the Rules are Here"
                         android:visibility="gone"
-                        android:textStyle="italic"
-                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:textSize="15sp"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
                         android:padding="5dp"/>
@@ -190,8 +190,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="T"
-                        android:textStyle="italic"
-                        android:textSize="20sp"
+                        android:textStyle="bold"
+                        android:textSize="15sp"
                         android:visibility="gone"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
@@ -254,8 +254,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="T"
-                        android:textSize="20sp"
-                        android:textStyle="italic"
+                        android:textStyle="bold"
+                        android:textSize="15sp"
                         android:visibility="gone"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
