--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,6 @@
     <color name="hrs_color">#f2c49514</color>
     <color name="min_color">#f240c414</color>
     <color name="sec_color">#f21460c4</color>
-    <color name="dheeraj_bakground">#455A64</color>
-    <color name="dheeraj_foreground">#00ACC1</color>
+    <color name="dheeraj_bakground">#222e33</color>
+    <color name="dheeraj_foreground">#045963</color>
 </resources>
