--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".eventpackage.automobile"
-    android:background="@color/black">
+    android:background="@color/dheeraj_bakground">
 
     <RelativeLayout
         android:id="@+id/relative_toolbar"
@@ -33,9 +33,8 @@
         <ImageView
             android:id="@+id/imageGame"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:src="@drawable/ab"
-            android:background="@color/black"/>
+            android:layout_height="150dp"
+            android:src="@drawable/ab"/>
 
 
         <android.support.v7.widget.CardView
@@ -46,6 +45,7 @@
             android:layout_centerHorizontal="true"
             app:cardCornerRadius="10dp"
             app:cardElevation="5dp"
+            app:cardBackgroundColor="@color/dheeraj_foreground"
             android:foreground="?android:attr/selectableItemBackground"
             android:layout_below="@+id/imageGame">
             <LinearLayout
@@ -81,6 +81,7 @@
             android:layout_margin="10dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="5dp"
+            app:cardBackgroundColor="@color/dheeraj_foreground"
             android:foreground="?android:attr/selectableItemBackground"
             android:layout_below="@+id/cvDesciption">
             <LinearLayout
@@ -146,6 +147,7 @@
             android:layout_margin="10dp"
             app:cardCornerRadius="10dp"
             app:cardElevation="5dp"
+            app:cardBackgroundColor="@color/dheeraj_foreground"
             android:foreground="?android:attr/selectableItemBackground"
             android:layout_below="@+id/cvRulesCard">
             <LinearLayout
@@ -210,6 +212,7 @@
             app:cardCornerRadius="10dp"
             android:foreground="?android:attr/selectableItemBackground"
             app:cardElevation="5dp"
+            app:cardBackgroundColor="@color/dheeraj_foreground"
             android:layout_below="@+id/cvPrizeCard">
             <LinearLayout
                 android:layout_width="match_parent"
@@ -282,6 +285,16 @@
         android:layout_marginEnd="20dp"
         app:backgroundTint="@color/min_color"
         app:srcCompat="@android:drawable/stat_sys_speakerphone" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fbTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/ic_timer"
+        app:backgroundTint="@color/min_color" />
 
 
 </RelativeLayout>
