--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,7 +7,7 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".MainActivity"
     tools:showIn="@layout/app_bar_main"
-    android:background="@color/black">
+    android:background="@color/dheeraj_bakground">
     <LinearLayout
         android:id="@+id/timer"
         android:layout_width="match_parent"
