--- a/app/src/main/res/layout/event_cardview.xml
+++ b/app/src/main/res/layout/event_cardview.xml
@@ -8,7 +8,8 @@
     android:padding="30dp"
     android:elevation="4dp"
     android:layout_margin="10dp"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    app:cardBackgroundColor="@color/dheeraj_foreground">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -22,7 +23,7 @@
             android:layout_height="200dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/comp" />
+            android:src="@drawable/comp"/>
 
         <TextView
             android:id="@+id/tvEventName"
