--- a/app/src/main/res/layout/list_content_main.xml
+++ b/app/src/main/res/layout/list_content_main.xml
@@ -6,6 +6,8 @@
     android:foreground="?android:attr/selectableItemBackground"
     android:padding="15dp"
     android:elevation="4dp"
+    app:cardMaxElevation="20dp"
+    app:cardBackgroundColor="@color/dheeraj_foreground"
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
