--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         android:text="Government College of Engineering and Reseach Awasri"
         android:textColor="@color/white"
-        android:padding="3dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingBottom="10dp"
         android:layout_gravity="center"/>
 </LinearLayout>
