--- a/app/src/main/res/layout/collapse.xml
+++ b/app/src/main/res/layout/collapse.xml
@@ -369,6 +369,49 @@
 
             </android.support.v7.widget.CardView>
 
+            <android.support.v7.widget.CardView android:id="@+id/card5"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                app:cardCornerRadius="10dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:padding="3dp"
+                android:elevation="4dp"
+                android:layout_margin="5dp"
+                app:cardBackgroundColor="@color/dheeraj_foreground">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/ivMaincard5"
+                        android:layout_width="80dp"
+                        android:layout_height="105dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/workshoplogo"
+                        android:scaleType="centerCrop"/>
+
+                    <TextView
+                        android:id="@+id/tvTitlecard5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Workshop"
+                        android:textColor="@color/white"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@id/ivMaincard5"
+                        android:layout_marginLeft="40dp"
+                        android:textSize="24sp"
+                        android:textStyle="bold" />
+
+                </RelativeLayout>
+
+
+            </android.support.v7.widget.CardView>
+
+
             <android.support.v7.widget.CardView android:id="@+id/card3"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
@@ -391,7 +434,7 @@
                         android:layout_alignParentTop="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginStart="10dp"
-                        android:src="@drawable/contact"/>
+                        android:src="@drawable/campuslogo"/>
 
                     <TextView
                         android:id="@+id/tvTitlecard3"
@@ -400,7 +443,7 @@
                         android:layout_centerVertical="true"
                         android:layout_toRightOf="@id/ivMaincard3"
                         android:layout_marginLeft="40dp"
-                        android:text="Co-Ordinator"
+                        android:text="Campus Ambassador"
                         android:textColor="@color/white"
                         android:textSize="24sp"
                         android:textStyle="bold" />
@@ -432,14 +475,13 @@
                         android:layout_alignParentTop="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginStart="10dp"
-                        android:src="@drawable/settings"
-                        android:scaleType="centerCrop"/>
+                        android:src="@drawable/loginlogo"/>
 
                     <TextView
                         android:id="@+id/tvTitlecard4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Setting"
+                        android:text="Co-Ordinator Login"
                         android:textColor="@color/white"
                         android:layout_centerVertical="true"
                         android:layout_toRightOf="@id/ivMaincard4"
