--- a/app/src/main/res/layout/list_timetable.xml
+++ b/app/src/main/res/layout/list_timetable.xml
@@ -5,19 +5,23 @@
     android:layout_height="wrap_content"
     android:layout_margin="1dp">
 
+
     <android.support.v7.widget.CardView
         android:layout_width="200dp"
-        android:layout_height="300dp"
+        android:layout_height="270dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_margin="5dp"
         android:background="#000"
         android:elevation="3dp"
-        app:cardMaxElevation="4dp">
+        app:cardMaxElevation="4dp"
+        app:cardBackgroundColor="@color/dheeraj_foreground">
 
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
 
             <ImageView
                 android:id="@+id/ivtimetable"
@@ -119,7 +123,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_margin="10dp"
                 android:layout_marginBottom="30dp"
-                android:text="Fess:300"
+                android:text="Fees:300"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
