--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -58,6 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Description"
+                android:textColor="@color/white"
                 android:textAlignment="center"
                 android:padding="3dp"
                 android:textStyle="bold"
@@ -68,6 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/white"
                     android:textStyle="bold"
                     android:textSize="15sp"
                     android:text="-Description"/>
@@ -102,6 +104,7 @@
                         android:layout_weight="1"
                         android:layout_gravity="center_vertical"
                         android:text="Game's Rule"
+                        android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="21sp"
                         android:layout_marginLeft="10dp"
@@ -127,6 +130,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="the Rules are Here"
+                        android:textColor="@color/white"
                         android:visibility="gone"
                         android:textStyle="bold"
                         android:textSize="15sp"
@@ -167,6 +171,7 @@
                         android:layout_weight="1"
                         android:layout_gravity="center_vertical"
                         android:text="Prizes"
+                        android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="21sp"
                         android:layout_marginLeft="10dp"
@@ -192,6 +197,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="T"
+                        android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="15sp"
                         android:visibility="gone"
@@ -232,6 +238,7 @@
                         android:layout_weight="1"
                         android:layout_gravity="center_vertical"
                         android:text="Co-Ordinator"
+                        android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="21sp"
                         android:layout_marginLeft="10dp"
@@ -257,6 +264,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="T"
+                        android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="15sp"
                         android:visibility="gone"
