--- a/app/src/main/res/layout/content_gcoeara.xml
+++ b/app/src/main/res/layout/content_gcoeara.xml
@@ -53,6 +53,8 @@
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:text="Timetable"
+            android:textSize="17dp"
+            android:textStyle="bold"
             android:layout_margin="10dp"
             android:textColor="@color/white"
             android:layout_toRightOf="@+id/ivMain" />
