--- a/app/src/main/res/layout/event_cardview.xml
+++ b/app/src/main/res/layout/event_cardview.xml
@@ -34,6 +34,7 @@
             android:textStyle="bold"
             android:textSize="25dp"
             android:gravity="center"
+            android:textColor="@color/white"
             android:layout_centerHorizontal="true"
             android:layout_margin="20dp"/>
         <TextView
@@ -41,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Event Description"
+            android:textColor="@color/white"
             android:layout_below="@+id/tvEventName"
             android:textStyle="bold"
             android:gravity="center"
