--- a/app/src/main/res/layout/list_timetable.xml
+++ b/app/src/main/res/layout/list_timetable.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="200dp"
-        android:layout_height="270dp"
+        android:layout_height="300dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_margin="5dp"
@@ -40,10 +40,12 @@
                 android:layout_below="@+id/ivtimetable"
                 android:layout_centerHorizontal="true"
                 android:text="Auto"
-                android:textSize="25dp"
+                android:textColor="@color/white"
+                android:textSize="20dp"
                 android:textStyle="bold" />
 
             <LinearLayout
+                android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvtimetable"
@@ -61,6 +63,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Round 1"
+                        android:textColor="#ff8400"
                         android:textSize="15dp" />
 
                     <TextView
@@ -68,6 +71,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Round 1"
+                        android:textColor="#ff8400"
                         android:textSize="15dp" />
                 </LinearLayout>
 
@@ -82,6 +86,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Round 2"
+                        android:textColor="@color/white"
                         android:textSize="15dp" />
 
                     <TextView
@@ -89,6 +94,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Round 1"
+                        android:textColor="@color/white"
                         android:textSize="15dp" />
                 </LinearLayout>
 
@@ -103,6 +109,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Round 3"
+                        android:textColor="#339111"
                         android:textSize="15dp" />
 
                     <TextView
@@ -110,22 +117,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Round 1"
+                        android:textColor="#339111"
                         android:textSize="15dp" />
                 </LinearLayout>
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tvEntryFee"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_margin="10dp"
-                android:layout_marginBottom="30dp"
-                android:text="Fees:300"
-                android:textSize="20dp"
-                android:textStyle="bold" />
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
