--- a/app/src/main/res/layout/collapse.xml
+++ b/app/src/main/res/layout/collapse.xml
@@ -254,6 +254,7 @@
                 android:id="@+id/ivAB"
                 android:layout_width="match_parent"
                 android:src="@drawable/ab"
+                android:layout_marginTop="80dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:fitsSystemWindows="true"
