--- a/app/src/main/res/layout/list_timetable.xml
+++ b/app/src/main/res/layout/list_timetable.xml
@@ -28,7 +28,7 @@
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_centerHorizontal="true"
-                android:background="#000"
+                android:background="@color/dheeraj_foreground"
                 android:padding="10dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/automobile" />
@@ -126,6 +126,4 @@
 
         </RelativeLayout>
     </android.support.v7.widget.CardView>
-
-
 </RelativeLayout>
