--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -45,10 +45,6 @@
     <item android:title="Other">
         <menu>
             <item
-                android:id="@+id/nav_co_ordinator"
-                android:title="Co-Ordinator"
-                android:icon="@drawable/ic_co_ordinator"/>
-            <item
                 android:id="@+id/nav_gallry"
                 android:title="Gallery"
                 android:icon="@drawable/ic_gallery"/>
@@ -71,15 +67,17 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-
-            <item
                 android:id="@+id/nav_contact"
                 android:icon="@drawable/ic_phone_contact_us"
                 android:title="Contact Us" />
         </menu>
     </item>
+
+    <group android:checkableBehavior="single">
+            <item
+                android:id="@+id/nav_developer"
+                android:icon="@drawable/ic_developer"
+                android:title="Developers" />
+    </group>
 
 </menu>
