--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,7 +16,7 @@
                 <item
                     android:id="@+id/nav_auto"
                     android:icon="@drawable/ic_auto"
-                    android:title="Aftokinitio">
+                    android:title="Aftokinito">
                 </item>
                 <item
                     android:id="@+id/nav_civil"
