--- a/app/src/main/res/layout/content_game.xml
+++ b/app/src/main/res/layout/content_game.xml
@@ -72,7 +72,7 @@
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:textSize="15sp"
-                    android:text="-Description"/>
+                    android:text=""/>
             </LinearLayout>
         </android.support.v7.widget.CardView>
 
@@ -170,7 +170,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:layout_gravity="center_vertical"
-                        android:text="Prizes"
+                        android:text="Entry Fees"
                         android:textColor="@color/white"
                         android:textStyle="bold"
                         android:textSize="21sp"
