--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -64,16 +64,22 @@
     </item>
 
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_contact"
-                android:icon="@drawable/ic_phone_contact_us"
-                android:title="Contact Us" />
-        </menu>
-    </item>
+    <group>
+        <item android:title="Communicate">
+            <menu>
+                <item
+                    android:id="@+id/nav_contact"
+                    android:icon="@drawable/ic_phone_contact_us"
+                    android:title="Contact Us" />
+                <item
+                    android:id="@+id/nav_accommodation"
+                    android:icon="@drawable/ic_phone_contact_us"
+                    android:title="Accommodation" />
+                </menu>
+        </item>
+    </group>
 
-    <group android:checkableBehavior="single">
+    <group>
             <item
                 android:id="@+id/nav_developer"
                 android:icon="@drawable/ic_developer"
