--- a/app/src/main/res/layout/collapse.xml
+++ b/app/src/main/res/layout/collapse.xml
@@ -285,7 +285,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:layout_margin="5dp">
+            android:layout_margin="5dp"
+            android:paddingBottom="50dp">
+
+            <TextView android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="20dp"
+                android:layout_marginBottom="10dp"
+                android:text="Event on 28 and 29 August"
+                android:textColor="@color/white"/>
 
             <android.support.v7.widget.CardView
                 android:id="@+id/card1"
