--- a/app/src/main/res/layout/content_login_screen.xml
+++ b/app/src/main/res/layout/content_login_screen.xml
@@ -110,7 +110,26 @@
                 android:textColor="#000001"
                 android:textSize="25dp" />
         </android.support.v7.widget.CardView>
-    <!---
+
+        <TextView
+            android:id="@+id/tvForgotPassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/card"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Forgot Password"
+            android:textColor="#ffffff"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/card"
+            app:layout_constraintVertical_bias="0.179" />
+
         <TextView
             android:id="@+id/tvSignUp"
             android:layout_width="wrap_content"
@@ -127,8 +146,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/card" />
-            -->
-    </android.support.constraint.ConstraintLayout>
+            app:layout_constraintTop_toBottomOf="@+id/card"
+            android:visibility="gone"/>
+</android.support.constraint.ConstraintLayout>
 
 </RelativeLayout>
