--- a/app/src/main/res/layout/collapse.xml
+++ b/app/src/main/res/layout/collapse.xml
@@ -292,6 +292,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:textSize="20dp"
+                android:textStyle="bold"
                 android:layout_marginBottom="10dp"
                 android:text="Event on 28 and 29 August"
                 android:textColor="@color/white"/>
